cmake_minimum_required(VERSION 3.20)

project(ffmpeg LANGUAGES C ASM_NASM)

add_library(ffmpeg_defaults INTERFACE)
target_include_directories(ffmpeg_defaults INTERFACE
    ${CMAKE_CURRENT_SOURCE_DIR}
    $<$<COMPILE_LANGUAGE:C>:${CMAKE_CURRENT_SOURCE_DIR}/compat/atomics/win32>)
target_compile_definitions(ffmpeg_defaults INTERFACE
    $<$<COMPILE_LANGUAGE:C>:_ISOC99_SOURCE>
    $<$<COMPILE_LANGUAGE:C>:_FILE_OFFSET_BITS=64>
    $<$<COMPILE_LANGUAGE:C>:_LARGEFILE_SOURCE>
    $<$<COMPILE_LANGUAGE:C>:_USE_MATH_DEFINES>
    $<$<COMPILE_LANGUAGE:C>:_CRT_SECURE_NO_WARNINGS>
    $<$<COMPILE_LANGUAGE:C>:_CRT_NONSTDC_NO_WARNINGS>
    $<$<COMPILE_LANGUAGE:C>:_WIN32_WINNT=0x0600>
    $<$<COMPILE_LANGUAGE:C>:HAVE_AV_CONFIG_H>
    $<$<COMPILE_LANGUAGE:C>:BUILDING_avfilter>)
target_compile_options(ffmpeg_defaults INTERFACE
    $<$<COMPILE_LANGUAGE:ASM_NASM>:-p ${CMAKE_CURRENT_BINARY_DIR}/config.asm>
    $<$<COMPILE_LANGUAGE:C>:/utf-8>)

add_subdirectory(doc)
add_subdirectory(fftools)
add_subdirectory(libavcodec)
add_subdirectory(libavdevice)
add_subdirectory(libavfilter)
add_subdirectory(libavformat)
add_subdirectory(libavutil)
add_subdirectory(libpostproc)
add_subdirectory(libswresample)
add_subdirectory(libswscale)

include(CTest)
if(BUILD_TESTING)
    add_subdirectory(tests)
endif()

string(CONCAT FFMPEG_CONFIG_ASM_CONTENT
    "%define ARCH_AARCH64 0\n"
    "%define ARCH_ALPHA 0\n"
    "%define ARCH_ARM 0\n"
    "%define ARCH_AVR32 0\n"
    "%define ARCH_AVR32_AP 0\n"
    "%define ARCH_AVR32_UC 0\n"
    "%define ARCH_BFIN 0\n"
    "%define ARCH_IA64 0\n"
    "%define ARCH_LOONGARCH 0\n"
    "%define ARCH_LOONGARCH32 0\n"
    "%define ARCH_LOONGARCH64 0\n"
    "%define ARCH_M68K 0\n"
    "%define ARCH_MIPS 0\n"
    "%define ARCH_MIPS64 0\n"
    "%define ARCH_PARISC 0\n"
    "%define ARCH_PPC 0\n"
    "%define ARCH_PPC64 0\n"
    "%define ARCH_RISCV 0\n"
    "%define ARCH_S390 0\n"
    "%define ARCH_SH4 0\n"
    "%define ARCH_SPARC 0\n"
    "%define ARCH_SPARC64 0\n"
    "%define ARCH_TILEGX 0\n"
    "%define ARCH_TILEPRO 0\n"
    "%define ARCH_TOMI 0\n"
    "%define ARCH_X86 1\n"
    "%define ARCH_X86_32 0\n"
    "%define ARCH_X86_64 1\n"
    "%define HAVE_ARMV5TE 0\n"
    "%define HAVE_ARMV6 0\n"
    "%define HAVE_ARMV6T2 0\n"
    "%define HAVE_ARMV8 0\n"
    "%define HAVE_NEON 0\n"
    "%define HAVE_VFP 0\n"
    "%define HAVE_VFPV3 0\n"
    "%define HAVE_SETEND 0\n"
    "%define HAVE_ALTIVEC 0\n"
    "%define HAVE_DCBZL 0\n"
    "%define HAVE_LDBRX 0\n"
    "%define HAVE_POWER8 0\n"
    "%define HAVE_PPC4XX 0\n"
    "%define HAVE_VSX 0\n"
    "%define HAVE_AESNI 1\n"
    "%define HAVE_AMD3DNOW 1\n"
    "%define HAVE_AMD3DNOWEXT 1\n"
    "%define HAVE_AVX 1\n"
    "%define HAVE_AVX2 1\n"
    "%define HAVE_AVX512 1\n"
    "%define HAVE_AVX512ICL 1\n"
    "%define HAVE_FMA3 1\n"
    "%define HAVE_FMA4 1\n"
    "%define HAVE_MMX 1\n"
    "%define HAVE_MMXEXT 1\n"
    "%define HAVE_SSE 1\n"
    "%define HAVE_SSE2 1\n"
    "%define HAVE_SSE3 1\n"
    "%define HAVE_SSE4 1\n"
    "%define HAVE_SSE42 1\n"
    "%define HAVE_SSSE3 1\n"
    "%define HAVE_XOP 1\n"
    "%define HAVE_CPUNOP 0\n"
    "%define HAVE_I686 1\n"
    "%define HAVE_MIPSFPU 0\n"
    "%define HAVE_MIPS32R2 0\n"
    "%define HAVE_MIPS32R5 0\n"
    "%define HAVE_MIPS64R2 0\n"
    "%define HAVE_MIPS32R6 0\n"
    "%define HAVE_MIPS64R6 0\n"
    "%define HAVE_MIPSDSP 0\n"
    "%define HAVE_MIPSDSPR2 0\n"
    "%define HAVE_MSA 0\n"
    "%define HAVE_LOONGSON2 0\n"
    "%define HAVE_LOONGSON3 0\n"
    "%define HAVE_MMI 0\n"
    "%define HAVE_LSX 0\n"
    "%define HAVE_LASX 0\n"
    "%define HAVE_ARMV5TE_EXTERNAL 0\n"
    "%define HAVE_ARMV6_EXTERNAL 0\n"
    "%define HAVE_ARMV6T2_EXTERNAL 0\n"
    "%define HAVE_ARMV8_EXTERNAL 0\n"
    "%define HAVE_NEON_EXTERNAL 0\n"
    "%define HAVE_VFP_EXTERNAL 0\n"
    "%define HAVE_VFPV3_EXTERNAL 0\n"
    "%define HAVE_SETEND_EXTERNAL 0\n"
    "%define HAVE_ALTIVEC_EXTERNAL 0\n"
    "%define HAVE_DCBZL_EXTERNAL 0\n"
    "%define HAVE_LDBRX_EXTERNAL 0\n"
    "%define HAVE_POWER8_EXTERNAL 0\n"
    "%define HAVE_PPC4XX_EXTERNAL 0\n"
    "%define HAVE_VSX_EXTERNAL 0\n"
    "%define HAVE_AESNI_EXTERNAL 1\n"
    "%define HAVE_AMD3DNOW_EXTERNAL 1\n"
    "%define HAVE_AMD3DNOWEXT_EXTERNAL 1\n"
    "%define HAVE_AVX_EXTERNAL 1\n"
    "%define HAVE_AVX2_EXTERNAL 1\n"
    "%define HAVE_AVX512_EXTERNAL 1\n"
    "%define HAVE_AVX512ICL_EXTERNAL 1\n"
    "%define HAVE_FMA3_EXTERNAL 1\n"
    "%define HAVE_FMA4_EXTERNAL 1\n"
    "%define HAVE_MMX_EXTERNAL 1\n"
    "%define HAVE_MMXEXT_EXTERNAL 1\n"
    "%define HAVE_SSE_EXTERNAL 1\n"
    "%define HAVE_SSE2_EXTERNAL 1\n"
    "%define HAVE_SSE3_EXTERNAL 1\n"
    "%define HAVE_SSE4_EXTERNAL 1\n"
    "%define HAVE_SSE42_EXTERNAL 1\n"
    "%define HAVE_SSSE3_EXTERNAL 1\n"
    "%define HAVE_XOP_EXTERNAL 1\n"
    "%define HAVE_CPUNOP_EXTERNAL 0\n"
    "%define HAVE_I686_EXTERNAL 0\n"
    "%define HAVE_MIPSFPU_EXTERNAL 0\n"
    "%define HAVE_MIPS32R2_EXTERNAL 0\n"
    "%define HAVE_MIPS32R5_EXTERNAL 0\n"
    "%define HAVE_MIPS64R2_EXTERNAL 0\n"
    "%define HAVE_MIPS32R6_EXTERNAL 0\n"
    "%define HAVE_MIPS64R6_EXTERNAL 0\n"
    "%define HAVE_MIPSDSP_EXTERNAL 0\n"
    "%define HAVE_MIPSDSPR2_EXTERNAL 0\n"
    "%define HAVE_MSA_EXTERNAL 0\n"
    "%define HAVE_LOONGSON2_EXTERNAL 0\n"
    "%define HAVE_LOONGSON3_EXTERNAL 0\n"
    "%define HAVE_MMI_EXTERNAL 0\n"
    "%define HAVE_LSX_EXTERNAL 0\n"
    "%define HAVE_LASX_EXTERNAL 0\n"
    "%define HAVE_ARMV5TE_INLINE 0\n"
    "%define HAVE_ARMV6_INLINE 0\n"
    "%define HAVE_ARMV6T2_INLINE 0\n"
    "%define HAVE_ARMV8_INLINE 0\n"
    "%define HAVE_NEON_INLINE 0\n"
    "%define HAVE_VFP_INLINE 0\n"
    "%define HAVE_VFPV3_INLINE 0\n"
    "%define HAVE_SETEND_INLINE 0\n"
    "%define HAVE_ALTIVEC_INLINE 0\n"
    "%define HAVE_DCBZL_INLINE 0\n"
    "%define HAVE_LDBRX_INLINE 0\n"
    "%define HAVE_POWER8_INLINE 0\n"
    "%define HAVE_PPC4XX_INLINE 0\n"
    "%define HAVE_VSX_INLINE 0\n"
    "%define HAVE_AESNI_INLINE 0\n"
    "%define HAVE_AMD3DNOW_INLINE 0\n"
    "%define HAVE_AMD3DNOWEXT_INLINE 0\n"
    "%define HAVE_AVX_INLINE 0\n"
    "%define HAVE_AVX2_INLINE 0\n"
    "%define HAVE_AVX512_INLINE 0\n"
    "%define HAVE_AVX512ICL_INLINE 0\n"
    "%define HAVE_FMA3_INLINE 0\n"
    "%define HAVE_FMA4_INLINE 0\n"
    "%define HAVE_MMX_INLINE 0\n"
    "%define HAVE_MMXEXT_INLINE 0\n"
    "%define HAVE_SSE_INLINE 0\n"
    "%define HAVE_SSE2_INLINE 0\n"
    "%define HAVE_SSE3_INLINE 0\n"
    "%define HAVE_SSE4_INLINE 0\n"
    "%define HAVE_SSE42_INLINE 0\n"
    "%define HAVE_SSSE3_INLINE 0\n"
    "%define HAVE_XOP_INLINE 0\n"
    "%define HAVE_CPUNOP_INLINE 0\n"
    "%define HAVE_I686_INLINE 0\n"
    "%define HAVE_MIPSFPU_INLINE 0\n"
    "%define HAVE_MIPS32R2_INLINE 0\n"
    "%define HAVE_MIPS32R5_INLINE 0\n"
    "%define HAVE_MIPS64R2_INLINE 0\n"
    "%define HAVE_MIPS32R6_INLINE 0\n"
    "%define HAVE_MIPS64R6_INLINE 0\n"
    "%define HAVE_MIPSDSP_INLINE 0\n"
    "%define HAVE_MIPSDSPR2_INLINE 0\n"
    "%define HAVE_MSA_INLINE 0\n"
    "%define HAVE_LOONGSON2_INLINE 0\n"
    "%define HAVE_LOONGSON3_INLINE 0\n"
    "%define HAVE_MMI_INLINE 0\n"
    "%define HAVE_LSX_INLINE 0\n"
    "%define HAVE_LASX_INLINE 0\n"
    "%define HAVE_ALIGNED_STACK 1\n"
    "%define HAVE_FAST_64BIT 1\n"
    "%define HAVE_FAST_CLZ 1\n"
    "%define HAVE_FAST_CMOV 1\n"
    "%define HAVE_FAST_FLOAT16 0\n"
    "%define HAVE_LOCAL_ALIGNED 1\n"
    "%define HAVE_SIMD_ALIGN_16 1\n"
    "%define HAVE_SIMD_ALIGN_32 1\n"
    "%define HAVE_SIMD_ALIGN_64 1\n"
    "%define HAVE_ATOMIC_CAS_PTR 0\n"
    "%define HAVE_MACHINE_RW_BARRIER 0\n"
    "%define HAVE_MEMORYBARRIER 1\n"
    "%define HAVE_MM_EMPTY 0\n"
    "%define HAVE_RDTSC 1\n"
    "%define HAVE_SEM_TIMEDWAIT 0\n"
    "%define HAVE_SYNC_VAL_COMPARE_AND_SWAP 0\n"
    "%define HAVE_CABS 0\n"
    "%define HAVE_CEXP 0\n"
    "%define HAVE_INLINE_ASM 0\n"
    "%define HAVE_SYMVER 0\n"
    "%define HAVE_X86ASM 1\n"
    "%define HAVE_BIGENDIAN 0\n"
    "%define HAVE_FAST_UNALIGNED 1\n"
    "%define HAVE_ARPA_INET_H 0\n"
    "%define HAVE_ASM_TYPES_H 0\n"
    "%define HAVE_CDIO_PARANOIA_H 0\n"
    "%define HAVE_CDIO_PARANOIA_PARANOIA_H 0\n"
    "%define HAVE_CUDA_H 0\n"
    "%define HAVE_DISPATCH_DISPATCH_H 0\n"
    "%define HAVE_DEV_BKTR_IOCTL_BT848_H 0\n"
    "%define HAVE_DEV_BKTR_IOCTL_METEOR_H 0\n"
    "%define HAVE_DEV_IC_BT8XX_H 0\n"
    "%define HAVE_DEV_VIDEO_BKTR_IOCTL_BT848_H 0\n"
    "%define HAVE_DEV_VIDEO_METEOR_IOCTL_METEOR_H 0\n"
    "%define HAVE_DIRECT_H 1\n"
    "%define HAVE_DIRENT_H 0\n"
    "%define HAVE_DXGIDEBUG_H 1\n"
    "%define HAVE_DXVA_H 1\n"
    "%define HAVE_ES2_GL_H 0\n"
    "%define HAVE_GSM_H 0\n"
    "%define HAVE_IO_H 1\n"
    "%define HAVE_LINUX_DMA_BUF_H 0\n"
    "%define HAVE_LINUX_PERF_EVENT_H 0\n"
    "%define HAVE_MACHINE_IOCTL_BT848_H 0\n"
    "%define HAVE_MACHINE_IOCTL_METEOR_H 0\n"
    "%define HAVE_MALLOC_H 1\n"
    "%define HAVE_OPENCV2_CORE_CORE_C_H 0\n"
    "%define HAVE_OPENGL_GL3_H 0\n"
    "%define HAVE_POLL_H 0\n"
    "%define HAVE_SYS_PARAM_H 0\n"
    "%define HAVE_SYS_RESOURCE_H 0\n"
    "%define HAVE_SYS_SELECT_H 0\n"
    "%define HAVE_SYS_SOUNDCARD_H 0\n"
    "%define HAVE_SYS_TIME_H 0\n"
    "%define HAVE_SYS_UN_H 0\n"
    "%define HAVE_SYS_VIDEOIO_H 0\n"
    "%define HAVE_TERMIOS_H 0\n"
    "%define HAVE_UDPLITE_H 0\n"
    "%define HAVE_UNISTD_H 0\n"
    "%define HAVE_VALGRIND_VALGRIND_H 0\n"
    "%define HAVE_WINDOWS_H 1\n"
    "%define HAVE_WINSOCK2_H 1\n"
    "%define HAVE_INTRINSICS_NEON 0\n"
    "%define HAVE_ATANF 1\n"
    "%define HAVE_ATAN2F 1\n"
    "%define HAVE_CBRT 1\n"
    "%define HAVE_CBRTF 1\n"
    "%define HAVE_COPYSIGN 1\n"
    "%define HAVE_COSF 1\n"
    "%define HAVE_ERF 1\n"
    "%define HAVE_EXP2 1\n"
    "%define HAVE_EXP2F 1\n"
    "%define HAVE_EXPF 1\n"
    "%define HAVE_HYPOT 1\n"
    "%define HAVE_ISFINITE 1\n"
    "%define HAVE_ISINF 1\n"
    "%define HAVE_ISNAN 1\n"
    "%define HAVE_LDEXPF 1\n"
    "%define HAVE_LLRINT 1\n"
    "%define HAVE_LLRINTF 1\n"
    "%define HAVE_LOG2 1\n"
    "%define HAVE_LOG2F 1\n"
    "%define HAVE_LOG10F 1\n"
    "%define HAVE_LRINT 1\n"
    "%define HAVE_LRINTF 1\n"
    "%define HAVE_POWF 1\n"
    "%define HAVE_RINT 1\n"
    "%define HAVE_ROUND 1\n"
    "%define HAVE_ROUNDF 1\n"
    "%define HAVE_SINF 1\n"
    "%define HAVE_TRUNC 1\n"
    "%define HAVE_TRUNCF 1\n"
    "%define HAVE_DOS_PATHS 1\n"
    "%define HAVE_LIBC_MSVCRT 1\n"
    "%define HAVE_MMAL_PARAMETER_VIDEO_MAX_NUM_CALLBACKS 0\n"
    "%define HAVE_SECTION_DATA_REL_RO 0\n"
    "%define HAVE_THREADS 1\n"
    "%define HAVE_UWP 0\n"
    "%define HAVE_WINRT 0\n"
    "%define HAVE_ACCESS 1\n"
    "%define HAVE_ALIGNED_MALLOC 1\n"
    "%define HAVE_ARC4RANDOM 0\n"
    "%define HAVE_CLOCK_GETTIME 0\n"
    "%define HAVE_CLOSESOCKET 1\n"
    "%define HAVE_COMMANDLINETOARGVW 1\n"
    "%define HAVE_FCNTL 0\n"
    "%define HAVE_GETADDRINFO 1\n"
    "%define HAVE_GETAUXVAL 0\n"
    "%define HAVE_GETENV 1\n"
    "%define HAVE_GETHRTIME 0\n"
    "%define HAVE_GETOPT 0\n"
    "%define HAVE_GETMODULEHANDLE 1\n"
    "%define HAVE_GETPROCESSAFFINITYMASK 1\n"
    "%define HAVE_GETPROCESSMEMORYINFO 1\n"
    "%define HAVE_GETPROCESSTIMES 1\n"
    "%define HAVE_GETRUSAGE 0\n"
    "%define HAVE_GETSTDHANDLE 1\n"
    "%define HAVE_GETSYSTEMTIMEASFILETIME 1\n"
    "%define HAVE_GETTIMEOFDAY 0\n"
    "%define HAVE_GLOB 0\n"
    "%define HAVE_GLXGETPROCADDRESS 0\n"
    "%define HAVE_GMTIME_R 0\n"
    "%define HAVE_INET_ATON 0\n"
    "%define HAVE_ISATTY 1\n"
    "%define HAVE_KBHIT 1\n"
    "%define HAVE_LOCALTIME_R 0\n"
    "%define HAVE_LSTAT 0\n"
    "%define HAVE_LZO1X_999_COMPRESS 0\n"
    "%define HAVE_MACH_ABSOLUTE_TIME 0\n"
    "%define HAVE_MAPVIEWOFFILE 1\n"
    "%define HAVE_MEMALIGN 0\n"
    "%define HAVE_MKSTEMP 0\n"
    "%define HAVE_MMAP 0\n"
    "%define HAVE_MPROTECT 0\n"
    "%define HAVE_NANOSLEEP 0\n"
    "%define HAVE_PEEKNAMEDPIPE 1\n"
    "%define HAVE_POSIX_MEMALIGN 0\n"
    "%define HAVE_PTHREAD_CANCEL 0\n"
    "%define HAVE_SCHED_GETAFFINITY 0\n"
    "%define HAVE_SECITEMIMPORT 0\n"
    "%define HAVE_SETCONSOLETEXTATTRIBUTE 1\n"
    "%define HAVE_SETCONSOLECTRLHANDLER 1\n"
    "%define HAVE_SETDLLDIRECTORY 1\n"
    "%define HAVE_SETMODE 1\n"
    "%define HAVE_SETRLIMIT 0\n"
    "%define HAVE_SLEEP 1\n"
    "%define HAVE_STRERROR_R 0\n"
    "%define HAVE_SYSCONF 0\n"
    "%define HAVE_SYSCTL 0\n"
    "%define HAVE_USLEEP 0\n"
    "%define HAVE_UTGETOSTYPEFROMSTRING 0\n"
    "%define HAVE_VIRTUALALLOC 1\n"
    "%define HAVE_WGLGETPROCADDRESS 0\n"
    "%define HAVE_BCRYPT 1\n"
    "%define HAVE_VAAPI_DRM 0\n"
    "%define HAVE_VAAPI_X11 0\n"
    "%define HAVE_VDPAU_X11 0\n"
    "%define HAVE_PTHREADS 0\n"
    "%define HAVE_OS2THREADS 0\n"
    "%define HAVE_W32THREADS 1\n"
    "%define HAVE_AS_ARCH_DIRECTIVE 0\n"
    "%define HAVE_AS_DN_DIRECTIVE 0\n"
    "%define HAVE_AS_FPU_DIRECTIVE 0\n"
    "%define HAVE_AS_FUNC 0\n"
    "%define HAVE_AS_OBJECT_ARCH 0\n"
    "%define HAVE_ASM_MOD_Q 0\n"
    "%define HAVE_BLOCKS_EXTENSION 0\n"
    "%define HAVE_EBP_AVAILABLE 0\n"
    "%define HAVE_EBX_AVAILABLE 0\n"
    "%define HAVE_GNU_AS 0\n"
    "%define HAVE_GNU_WINDRES 0\n"
    "%define HAVE_IBM_ASM 0\n"
    "%define HAVE_INLINE_ASM_DIRECT_SYMBOL_REFS 0\n"
    "%define HAVE_INLINE_ASM_LABELS 0\n"
    "%define HAVE_INLINE_ASM_NONLOCAL_LABELS 0\n"
    "%define HAVE_PRAGMA_DEPRECATED 1\n"
    "%define HAVE_RSYNC_CONTIMEOUT 0\n"
    "%define HAVE_SYMVER_ASM_LABEL 0\n"
    "%define HAVE_SYMVER_GNU_ASM 0\n"
    "%define HAVE_VFP_ARGS 0\n"
    "%define HAVE_XFORM_ASM 0\n"
    "%define HAVE_XMM_CLOBBERS 0\n"
    "%define HAVE_DPI_AWARENESS_CONTEXT 1\n"
    "%define HAVE_IDXGIOUTPUT5 1\n"
    "%define HAVE_KCMVIDEOCODECTYPE_HEVC 0\n"
    "%define HAVE_KCMVIDEOCODECTYPE_HEVCWITHALPHA 0\n"
    "%define HAVE_KCMVIDEOCODECTYPE_VP9 0\n"
    "%define HAVE_KCVPIXELFORMATTYPE_420YPCBCR10BIPLANARVIDEORANGE 0\n"
    "%define HAVE_KCVPIXELFORMATTYPE_422YPCBCR8BIPLANARVIDEORANGE 0\n"
    "%define HAVE_KCVPIXELFORMATTYPE_422YPCBCR10BIPLANARVIDEORANGE 0\n"
    "%define HAVE_KCVPIXELFORMATTYPE_422YPCBCR16BIPLANARVIDEORANGE 0\n"
    "%define HAVE_KCVPIXELFORMATTYPE_444YPCBCR8BIPLANARVIDEORANGE 0\n"
    "%define HAVE_KCVPIXELFORMATTYPE_444YPCBCR10BIPLANARVIDEORANGE 0\n"
    "%define HAVE_KCVPIXELFORMATTYPE_444YPCBCR16BIPLANARVIDEORANGE 0\n"
    "%define HAVE_KCVIMAGEBUFFERTRANSFERFUNCTION_SMPTE_ST_2084_PQ 0\n"
    "%define HAVE_KCVIMAGEBUFFERTRANSFERFUNCTION_ITU_R_2100_HLG 0\n"
    "%define HAVE_KCVIMAGEBUFFERTRANSFERFUNCTION_LINEAR 0\n"
    "%define HAVE_KCVIMAGEBUFFERYCBCRMATRIX_ITU_R_2020 0\n"
    "%define HAVE_KCVIMAGEBUFFERCOLORPRIMARIES_ITU_R_2020 0\n"
    "%define HAVE_KCVIMAGEBUFFERTRANSFERFUNCTION_ITU_R_2020 0\n"
    "%define HAVE_KCVIMAGEBUFFERTRANSFERFUNCTION_SMPTE_ST_428_1 0\n"
    "%define HAVE_SOCKLEN_T 1\n"
    "%define HAVE_STRUCT_ADDRINFO 1\n"
    "%define HAVE_STRUCT_GROUP_SOURCE_REQ 1\n"
    "%define HAVE_STRUCT_IP_MREQ_SOURCE 1\n"
    "%define HAVE_STRUCT_IPV6_MREQ 1\n"
    "%define HAVE_STRUCT_MSGHDR_MSG_FLAGS 0\n"
    "%define HAVE_STRUCT_POLLFD 1\n"
    "%define HAVE_STRUCT_RUSAGE_RU_MAXRSS 0\n"
    "%define HAVE_STRUCT_SCTP_EVENT_SUBSCRIBE 0\n"
    "%define HAVE_STRUCT_SOCKADDR_IN6 1\n"
    "%define HAVE_STRUCT_SOCKADDR_SA_LEN 0\n"
    "%define HAVE_STRUCT_SOCKADDR_STORAGE 1\n"
    "%define HAVE_STRUCT_STAT_ST_MTIM_TV_NSEC 0\n"
    "%define HAVE_STRUCT_V4L2_FRMIVALENUM_DISCRETE 0\n"
    "%define HAVE_GZIP 1\n"
    "%define HAVE_LIBDRM_GETFB2 0\n"
    "%define HAVE_MAKEINFO 0\n"
    "%define HAVE_MAKEINFO_HTML 0\n"
    "%define HAVE_OPENCL_D3D11 0\n"
    "%define HAVE_OPENCL_DRM_ARM 0\n"
    "%define HAVE_OPENCL_DRM_BEIGNET 0\n"
    "%define HAVE_OPENCL_DXVA2 0\n"
    "%define HAVE_OPENCL_VAAPI_BEIGNET 0\n"
    "%define HAVE_OPENCL_VAAPI_INTEL_MEDIA 0\n"
    "%define HAVE_PERL 1\n"
    "%define HAVE_POD2MAN 1\n"
    "%define HAVE_TEXI2HTML 0\n"
    "%define HAVE_XMLLINT 1\n"
    "%define HAVE_ZLIB_GZIP 0\n"
    "%define CONFIG_DOC 1\n"
    "%define CONFIG_HTMLPAGES 0\n"
    "%define CONFIG_MANPAGES 1\n"
    "%define CONFIG_PODPAGES 1\n"
    "%define CONFIG_TXTPAGES 0\n"
    "%define CONFIG_AVIO_LIST_DIR_EXAMPLE 1\n"
    "%define CONFIG_AVIO_READING_EXAMPLE 1\n"
    "%define CONFIG_DECODE_AUDIO_EXAMPLE 1\n"
    "%define CONFIG_DECODE_VIDEO_EXAMPLE 1\n"
    "%define CONFIG_DEMUXING_DECODING_EXAMPLE 1\n"
    "%define CONFIG_ENCODE_AUDIO_EXAMPLE 1\n"
    "%define CONFIG_ENCODE_VIDEO_EXAMPLE 1\n"
    "%define CONFIG_EXTRACT_MVS_EXAMPLE 1\n"
    "%define CONFIG_FILTER_AUDIO_EXAMPLE 1\n"
    "%define CONFIG_FILTERING_AUDIO_EXAMPLE 1\n"
    "%define CONFIG_FILTERING_VIDEO_EXAMPLE 1\n"
    "%define CONFIG_HTTP_MULTICLIENT_EXAMPLE 0\n"
    "%define CONFIG_HW_DECODE_EXAMPLE 1\n"
    "%define CONFIG_METADATA_EXAMPLE 1\n"
    "%define CONFIG_MUXING_EXAMPLE 1\n"
    "%define CONFIG_QSVDEC_EXAMPLE 0\n"
    "%define CONFIG_REMUXING_EXAMPLE 1\n"
    "%define CONFIG_RESAMPLING_AUDIO_EXAMPLE 1\n"
    "%define CONFIG_SCALING_VIDEO_EXAMPLE 1\n"
    "%define CONFIG_TRANSCODE_AAC_EXAMPLE 1\n"
    "%define CONFIG_TRANSCODING_EXAMPLE 1\n"
    "%define CONFIG_VAAPI_ENCODE_EXAMPLE 0\n"
    "%define CONFIG_VAAPI_TRANSCODE_EXAMPLE 0\n"
    "%define CONFIG_AVISYNTH 0\n"
    "%define CONFIG_FREI0R 0\n"
    "%define CONFIG_LIBCDIO 0\n"
    "%define CONFIG_LIBDAVS2 0\n"
    "%define CONFIG_LIBRUBBERBAND 0\n"
    "%define CONFIG_LIBVIDSTAB 0\n"
    "%define CONFIG_LIBX264 0\n"
    "%define CONFIG_LIBX265 0\n"
    "%define CONFIG_LIBXAVS 0\n"
    "%define CONFIG_LIBXAVS2 0\n"
    "%define CONFIG_LIBXVID 0\n"
    "%define CONFIG_DECKLINK 0\n"
    "%define CONFIG_LIBFDK_AAC 0\n"
    "%define CONFIG_LIBTLS 0\n"
    "%define CONFIG_GMP 0\n"
    "%define CONFIG_LIBARIBB24 0\n"
    "%define CONFIG_LIBLENSFUN 0\n"
    "%define CONFIG_LIBOPENCORE_AMRNB 0\n"
    "%define CONFIG_LIBOPENCORE_AMRWB 0\n"
    "%define CONFIG_LIBVO_AMRWBENC 0\n"
    "%define CONFIG_MBEDTLS 0\n"
    "%define CONFIG_RKMPP 0\n"
    "%define CONFIG_LIBSMBCLIENT 0\n"
    "%define CONFIG_CHROMAPRINT 0\n"
    "%define CONFIG_GCRYPT 0\n"
    "%define CONFIG_GNUTLS 0\n"
    "%define CONFIG_JNI 0\n"
    "%define CONFIG_LADSPA 0\n"
    "%define CONFIG_LCMS2 0\n"
    "%define CONFIG_LIBAOM 0\n"
    "%define CONFIG_LIBASS 0\n"
    "%define CONFIG_LIBBLURAY 0\n"
    "%define CONFIG_LIBBS2B 0\n"
    "%define CONFIG_LIBCACA 0\n"
    "%define CONFIG_LIBCELT 0\n"
    "%define CONFIG_LIBCODEC2 0\n"
    "%define CONFIG_LIBDAV1D 0\n"
    "%define CONFIG_LIBDC1394 0\n"
    "%define CONFIG_LIBDRM 0\n"
    "%define CONFIG_LIBFLITE 0\n"
    "%define CONFIG_LIBFONTCONFIG 0\n"
    "%define CONFIG_LIBFREETYPE 0\n"
    "%define CONFIG_LIBFRIBIDI 0\n"
    "%define CONFIG_LIBGLSLANG 0\n"
    "%define CONFIG_LIBGME 0\n"
    "%define CONFIG_LIBGSM 0\n"
    "%define CONFIG_LIBIEC61883 0\n"
    "%define CONFIG_LIBILBC 0\n"
    "%define CONFIG_LIBJACK 0\n"
    "%define CONFIG_LIBJXL 0\n"
    "%define CONFIG_LIBKLVANC 0\n"
    "%define CONFIG_LIBKVAZAAR 0\n"
    "%define CONFIG_LIBMODPLUG 0\n"
    "%define CONFIG_LIBMP3LAME 0\n"
    "%define CONFIG_LIBMYSOFA 0\n"
    "%define CONFIG_LIBOPENCV 0\n"
    "%define CONFIG_LIBOPENH264 0\n"
    "%define CONFIG_LIBOPENJPEG 0\n"
    "%define CONFIG_LIBOPENMPT 0\n"
    "%define CONFIG_LIBOPENVINO 0\n"
    "%define CONFIG_LIBOPUS 0\n"
    "%define CONFIG_LIBPLACEBO 0\n"
    "%define CONFIG_LIBPULSE 0\n"
    "%define CONFIG_LIBRABBITMQ 0\n"
    "%define CONFIG_LIBRAV1E 0\n"
    "%define CONFIG_LIBRIST 0\n"
    "%define CONFIG_LIBRSVG 0\n"
    "%define CONFIG_LIBRTMP 0\n"
    "%define CONFIG_LIBSHADERC 0\n"
    "%define CONFIG_LIBSHINE 0\n"
    "%define CONFIG_LIBSMBCLIENT 0\n"
    "%define CONFIG_LIBSNAPPY 0\n"
    "%define CONFIG_LIBSOXR 0\n"
    "%define CONFIG_LIBSPEEX 0\n"
    "%define CONFIG_LIBSRT 0\n"
    "%define CONFIG_LIBSSH 0\n"
    "%define CONFIG_LIBSVTAV1 0\n"
    "%define CONFIG_LIBTENSORFLOW 0\n"
    "%define CONFIG_LIBTESSERACT 0\n"
    "%define CONFIG_LIBTHEORA 0\n"
    "%define CONFIG_LIBTWOLAME 0\n"
    "%define CONFIG_LIBUAVS3D 0\n"
    "%define CONFIG_LIBV4L2 0\n"
    "%define CONFIG_LIBVMAF 0\n"
    "%define CONFIG_LIBVORBIS 0\n"
    "%define CONFIG_LIBVPX 0\n"
    "%define CONFIG_LIBWEBP 0\n"
    "%define CONFIG_LIBXML2 0\n"
    "%define CONFIG_LIBZIMG 0\n"
    "%define CONFIG_LIBZMQ 0\n"
    "%define CONFIG_LIBZVBI 0\n"
    "%define CONFIG_LV2 0\n"
    "%define CONFIG_MEDIACODEC 0\n"
    "%define CONFIG_OPENAL 0\n"
    "%define CONFIG_OPENGL 0\n"
    "%define CONFIG_OPENSSL 0\n"
    "%define CONFIG_POCKETSPHINX 0\n"
    "%define CONFIG_VAPOURSYNTH 0\n"
    "%define CONFIG_ALSA 0\n"
    "%define CONFIG_APPKIT 0\n"
    "%define CONFIG_AVFOUNDATION 0\n"
    "%define CONFIG_BZLIB 0\n"
    "%define CONFIG_COREIMAGE 0\n"
    "%define CONFIG_ICONV 0\n"
    "%define CONFIG_LIBXCB 0\n"
    "%define CONFIG_LIBXCB_SHM 0\n"
    "%define CONFIG_LIBXCB_SHAPE 0\n"
    "%define CONFIG_LIBXCB_XFIXES 0\n"
    "%define CONFIG_LZMA 0\n"
    "%define CONFIG_MEDIAFOUNDATION 1\n"
    "%define CONFIG_METAL 0\n"
    "%define CONFIG_SCHANNEL 1\n"
    "%define CONFIG_SDL2 0\n"
    "%define CONFIG_SECURETRANSPORT 0\n"
    "%define CONFIG_SNDIO 0\n"
    "%define CONFIG_XLIB 0\n"
    "%define CONFIG_ZLIB 0\n"
    "%define CONFIG_CUDA_NVCC 0\n"
    "%define CONFIG_CUDA_SDK 0\n"
    "%define CONFIG_LIBNPP 0\n"
    "%define CONFIG_LIBMFX 0\n"
    "%define CONFIG_LIBVPL 0\n"
    "%define CONFIG_MMAL 0\n"
    "%define CONFIG_OMX 0\n"
    "%define CONFIG_OPENCL 0\n"
    "%define CONFIG_AMF 0\n"
    "%define CONFIG_AUDIOTOOLBOX 0\n"
    "%define CONFIG_CRYSTALHD 0\n"
    "%define CONFIG_CUDA 0\n"
    "%define CONFIG_CUDA_LLVM 1\n"
    "%define CONFIG_CUVID 0\n"
    "%define CONFIG_D3D11VA 1\n"
    "%define CONFIG_DXVA2 1\n"
    "%define CONFIG_FFNVCODEC 0\n"
    "%define CONFIG_NVDEC 0\n"
    "%define CONFIG_NVENC 0\n"
    "%define CONFIG_VAAPI 0\n"
    "%define CONFIG_VDPAU 0\n"
    "%define CONFIG_VIDEOTOOLBOX 0\n"
    "%define CONFIG_VULKAN 0\n"
    "%define CONFIG_V4L2_M2M 0\n"
    "%define CONFIG_FTRAPV 0\n"
    "%define CONFIG_GRAY 0\n"
    "%define CONFIG_HARDCODED_TABLES 0\n"
    "%define CONFIG_OMX_RPI 0\n"
    "%define CONFIG_RUNTIME_CPUDETECT 1\n"
    "%define CONFIG_SAFE_BITSTREAM_READER 1\n"
    "%define CONFIG_SHARED 0\n"
    "%define CONFIG_SMALL 0\n"
    "%define CONFIG_STATIC 1\n"
    "%define CONFIG_SWSCALE_ALPHA 1\n"
    "%define CONFIG_GPL 0\n"
    "%define CONFIG_NONFREE 0\n"
    "%define CONFIG_VERSION3 0\n"
    "%define CONFIG_AVDEVICE 1\n"
    "%define CONFIG_AVFILTER 1\n"
    "%define CONFIG_SWSCALE 1\n"
    "%define CONFIG_POSTPROC 0\n"
    "%define CONFIG_AVFORMAT 1\n"
    "%define CONFIG_AVCODEC 1\n"
    "%define CONFIG_SWRESAMPLE 1\n"
    "%define CONFIG_AVUTIL 1\n"
    "%define CONFIG_FFPLAY 0\n"
    "%define CONFIG_FFPROBE 1\n"
    "%define CONFIG_FFMPEG 1\n"
    "%define CONFIG_DCT 1\n"
    "%define CONFIG_DWT 1\n"
    "%define CONFIG_ERROR_RESILIENCE 1\n"
    "%define CONFIG_FAAN 1\n"
    "%define CONFIG_FAST_UNALIGNED 1\n"
    "%define CONFIG_FFT 1\n"
    "%define CONFIG_LSP 1\n"
    "%define CONFIG_MDCT 1\n"
    "%define CONFIG_PIXELUTILS 1\n"
    "%define CONFIG_NETWORK 1\n"
    "%define CONFIG_RDFT 1\n"
    "%define CONFIG_AUTODETECT 0\n"
    "%define CONFIG_FONTCONFIG 0\n"
    "%define CONFIG_LARGE_TESTS 1\n"
    "%define CONFIG_LINUX_PERF 0\n"
    "%define CONFIG_MACOS_KPERF 0\n"
    "%define CONFIG_MEMORY_POISONING 0\n"
    "%define CONFIG_NEON_CLOBBER_TEST 0\n"
    "%define CONFIG_OSSFUZZ 0\n"
    "%define CONFIG_PIC 0\n"
    "%define CONFIG_PTX_COMPRESSION 0\n"
    "%define CONFIG_THUMB 0\n"
    "%define CONFIG_VALGRIND_BACKTRACE 0\n"
    "%define CONFIG_XMM_CLOBBER_TEST 0\n"
    "%define CONFIG_BSFS 1\n"
    "%define CONFIG_DECODERS 1\n"
    "%define CONFIG_ENCODERS 1\n"
    "%define CONFIG_HWACCELS 1\n"
    "%define CONFIG_PARSERS 1\n"
    "%define CONFIG_INDEVS 1\n"
    "%define CONFIG_OUTDEVS 0\n"
    "%define CONFIG_FILTERS 1\n"
    "%define CONFIG_DEMUXERS 1\n"
    "%define CONFIG_MUXERS 1\n"
    "%define CONFIG_PROTOCOLS 1\n"
    "%define CONFIG_AANDCTTABLES 1\n"
    "%define CONFIG_AC3DSP 1\n"
    "%define CONFIG_ADTS_HEADER 1\n"
    "%define CONFIG_ATSC_A53 1\n"
    "%define CONFIG_AUDIO_FRAME_QUEUE 1\n"
    "%define CONFIG_AUDIODSP 1\n"
    "%define CONFIG_BLOCKDSP 1\n"
    "%define CONFIG_BSWAPDSP 1\n"
    "%define CONFIG_CABAC 1\n"
    "%define CONFIG_CBS 1\n"
    "%define CONFIG_CBS_AV1 1\n"
    "%define CONFIG_CBS_H264 1\n"
    "%define CONFIG_CBS_H265 1\n"
    "%define CONFIG_CBS_JPEG 0\n"
    "%define CONFIG_CBS_MPEG2 1\n"
    "%define CONFIG_CBS_VP9 1\n"
    "%define CONFIG_DEFLATE_WRAPPER 0\n"
    "%define CONFIG_DIRAC_PARSE 1\n"
    "%define CONFIG_DNN 1\n"
    "%define CONFIG_DOVI_RPU 1\n"
    "%define CONFIG_DVPROFILE 1\n"
    "%define CONFIG_EXIF 1\n"
    "%define CONFIG_FAANDCT 1\n"
    "%define CONFIG_FAANIDCT 1\n"
    "%define CONFIG_FDCTDSP 1\n"
    "%define CONFIG_FMTCONVERT 1\n"
    "%define CONFIG_FRAME_THREAD_ENCODER 1\n"
    "%define CONFIG_G722DSP 1\n"
    "%define CONFIG_GOLOMB 1\n"
    "%define CONFIG_GPLV3 0\n"
    "%define CONFIG_H263DSP 1\n"
    "%define CONFIG_H264CHROMA 1\n"
    "%define CONFIG_H264DSP 1\n"
    "%define CONFIG_H264PARSE 1\n"
    "%define CONFIG_H264PRED 1\n"
    "%define CONFIG_H264QPEL 1\n"
    "%define CONFIG_HEVCPARSE 1\n"
    "%define CONFIG_HPELDSP 1\n"
    "%define CONFIG_HUFFMAN 1\n"
    "%define CONFIG_HUFFYUVDSP 1\n"
    "%define CONFIG_HUFFYUVENCDSP 1\n"
    "%define CONFIG_IDCTDSP 1\n"
    "%define CONFIG_IIRFILTER 1\n"
    "%define CONFIG_MDCT15 1\n"
    "%define CONFIG_INFLATE_WRAPPER 0\n"
    "%define CONFIG_INTRAX8 1\n"
    "%define CONFIG_ISO_MEDIA 1\n"
    "%define CONFIG_IVIDSP 1\n"
    "%define CONFIG_JPEGTABLES 1\n"
    "%define CONFIG_LGPLV3 0\n"
    "%define CONFIG_LIBX262 0\n"
    "%define CONFIG_LLAUDDSP 1\n"
    "%define CONFIG_LLVIDDSP 1\n"
    "%define CONFIG_LLVIDENCDSP 1\n"
    "%define CONFIG_LPC 1\n"
    "%define CONFIG_LZF 1\n"
    "%define CONFIG_ME_CMP 1\n"
    "%define CONFIG_MPEG_ER 1\n"
    "%define CONFIG_MPEGAUDIO 1\n"
    "%define CONFIG_MPEGAUDIODSP 1\n"
    "%define CONFIG_MPEGAUDIOHEADER 1\n"
    "%define CONFIG_MPEG4AUDIO 1\n"
    "%define CONFIG_MPEGVIDEO 1\n"
    "%define CONFIG_MPEGVIDEODEC 1\n"
    "%define CONFIG_MPEGVIDEOENC 1\n"
    "%define CONFIG_MSMPEG4DEC 1\n"
    "%define CONFIG_MSMPEG4ENC 1\n"
    "%define CONFIG_MSS34DSP 1\n"
    "%define CONFIG_PIXBLOCKDSP 1\n"
    "%define CONFIG_QPELDSP 1\n"
    "%define CONFIG_QSV 0\n"
    "%define CONFIG_QSVDEC 0\n"
    "%define CONFIG_QSVENC 0\n"
    "%define CONFIG_QSVVPP 0\n"
    "%define CONFIG_RANGECODER 1\n"
    "%define CONFIG_RIFFDEC 1\n"
    "%define CONFIG_RIFFENC 1\n"
    "%define CONFIG_RTPDEC 1\n"
    "%define CONFIG_RTPENC_CHAIN 1\n"
    "%define CONFIG_RV34DSP 1\n"
    "%define CONFIG_SCENE_SAD 1\n"
    "%define CONFIG_SINEWIN 1\n"
    "%define CONFIG_SNAPPY 1\n"
    "%define CONFIG_SRTP 1\n"
    "%define CONFIG_STARTCODE 1\n"
    "%define CONFIG_TEXTUREDSP 1\n"
    "%define CONFIG_TEXTUREDSPENC 1\n"
    "%define CONFIG_TPELDSP 1\n"
    "%define CONFIG_VAAPI_1 0\n"
    "%define CONFIG_VAAPI_ENCODE 0\n"
    "%define CONFIG_VC1DSP 1\n"
    "%define CONFIG_VIDEODSP 1\n"
    "%define CONFIG_VP3DSP 1\n"
    "%define CONFIG_VP56DSP 1\n"
    "%define CONFIG_VP8DSP 1\n"
    "%define CONFIG_WMA_FREQS 1\n"
    "%define CONFIG_WMV2DSP 1\n")
file(GENERATE OUTPUT config.asm CONTENT ${FFMPEG_CONFIG_ASM_CONTENT})
